<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/test_email"
            android:hint="@string/input_your_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/input_your_password"
            android:inputType="numberPassword"
            android:padding="10dp"
            android:text="@string/test_password"
            android:textSize="22sp" />

        <Button
            android:id="@+id/login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/login"
            android:textSize="22sp" />
    </LinearLayout>
</RelativeLayout>
